--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,12 @@
 body {
   background-color: #dff0ea
 }
+button:hover {
+  background-color: #e37070;
+}
+button{
+  color: white;
+  background: red;
+  border-radius: 10px
+}
+e4c79f
