Updated favicon and background image

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 body {
+  background-image: url("https://ci6.googleusercontent.com/proxy/Q8hKqfl-ZEv-On1GfX2Cz6pKtx9nIEqYkiTyqXoIgbb2X7yVBVpkyMJiOZBXXYqRVHajqueFw56ej7NdyKAKooGVBc6WlW8uNeep0geIkHNJkIvH24wCRKBgNMP4JmJI9YBQWLB37oTBn0-qDbnag64l40-APy2g=s0-d-e1-ft#https://www.freelogodesign.org/file/app/client/thumb/b722d84f-5784-488e-8eab-35addf887144_200x200.png");
+  background-size: cover;
   background-color: #dff0ea
 }
 button:hover {
